--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>WeirdSynths — The EmotionSynth Ecosystem</title>
+<title>WeirdSynth — Premium VCV Rack Pro 2 Ecosystem</title>
 <meta name="description" content="Premium VCV Rack Pro 2 modules connecting the physical world to modular synthesis. Your face controls your synthesizer. More coming soon.">
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap');
@@ -660,7 +660,7 @@ footer {
 <!-- ===== HERO ===== -->
 <header class="hero">
   <div class="hero-badge">VCV Rack Pro 2 Premium Plugin Ecosystem</div>
-  <h1 class="hero-title glitch" data-text="WeirdSynths">WeirdSynths</h1>
+  <h1 class="hero-title glitch" data-text="WeirdSynth">WeirdSynth</h1>
   <p class="hero-sub">
     Premium VCV Rack Pro 2 modules that connect the physical world to modular synthesis.
     Your face. Your emotions. Your body. This is just the beginning.
@@ -671,8 +671,8 @@ footer {
       <div class="stat-label">Modules at Launch</div>
     </div>
     <div class="stat">
-      <div class="stat-number purple">???</div>
-      <div class="stat-label">More Coming</div>
+      <div class="stat-number purple">40+</div>
+      <div class="stat-label">Modules Planned</div>
     </div>
     <div class="stat">
       <div class="stat-number cyan">1</div>
@@ -716,7 +716,7 @@ footer {
   <div class="section-label">The Vision</div>
   <h2 class="section-title">Every signal in the universe<br>is a modulation source.</h2>
   <p class="section-desc">
-    WeirdSynths builds the EmotionSynth Ecosystem: premium VCV Rack Pro 2 modules that connect
+    WeirdSynth builds premium VCV Rack Pro 2 modules that connect
     real-world data, advanced mathematics, and cutting-edge science to voltage-controlled sound.
     No other platform has ever attempted this.
   </p>
@@ -751,15 +751,15 @@ footer {
   <div class="section-label">Product Lines</div>
   <h2 class="section-title">One collection launching.<br>Six more locked.</h2>
   <p class="section-desc">
-    EmotionSynth Core is just the beginning. Six more collections are in active development,
+    WeirdSynth Core is just the beginning. Six more collections are in active development,
     each exploring a frontier that modular synthesis has never touched. Follow us to unlock the reveals.
   </p>
   <div class="product-grid">
     <!-- ===== CORE: FULLY VISIBLE ===== -->
     <div class="product-card card-pink">
       <div class="card-icon">&#x1F3AD;</div>
-      <div class="card-title">EmotionSynth Core</div>
-      <div class="card-count">7 modules | $45</div>
+      <div class="card-title">WeirdSynth Core</div>
+      <div class="card-count">7 modules | $30</div>
       <div class="card-desc">The flagship. Facial emotion detection, Twitch integration, and more. Body tracking, object recognition, and Kinect integration (360, One, and Azure models) planned for future updates. Your face controls your synthesizer.</div>
       <div class="card-tags">
         <span class="tag">Webcam</span>
@@ -884,35 +884,35 @@ footer {
   <div class="section-label">Pricing</div>
   <h2 class="section-title">Start weird. Go weirder.</h2>
   <p class="section-desc">
-    EmotionSynth Core available at launch. More collections and bundle pricing revealed as each product line drops.
+    WeirdSynth Core available at launch. More collections and bundle pricing revealed as each product line drops.
   </p>
   <div class="pricing-grid">
     <div class="price-card">
       <div class="price-label">Individual Modules</div>
       <div class="price-name">Pick & Choose</div>
-      <div class="price-amount"><span class="currency">$</span>5-45</div>
+      <div class="price-amount"><span class="currency">$</span>5-30</div>
       <div class="price-detail">Buy exactly what you need. Each module sold separately.</div>
       <a href="#notify" class="btn btn-secondary">Notify Me</a>
     </div>
     <div class="price-card featured">
       <div class="price-label">Best Value at Launch</div>
-      <div class="price-name">EmotionSynth Core</div>
-      <div class="price-amount"><span class="currency">$</span>45</div>
+      <div class="price-name">WeirdSynth Core</div>
+      <div class="price-amount"><span class="currency">$</span>30</div>
       <div class="price-detail">7 modules. Vision, streaming, and more. Kinect + body tracking coming soon.</div>
       <a href="#notify" class="btn btn-primary">Notify Me</a>
     </div>
     <div class="price-card">
-      <div class="price-label">Add-On</div>
-      <div class="price-name">Enigma Module</div>
-      <div class="price-amount"><span class="currency">$</span>5</div>
-      <div class="price-detail">WWII Enigma cipher machine as a voltage processor. Historical encryption meets modular synthesis.</div>
+      <div class="price-label">Collections</div>
+      <div class="price-name">Per Collection</div>
+      <div class="price-amount"><span class="currency">$</span>25</div>
+      <div class="price-detail">10+ modules per collection. Multiple themed collections coming soon.</div>
       <a href="#notify" class="btn btn-secondary">Notify Me</a>
     </div>
     <div class="price-card">
-      <div class="price-label">Coming Later</div>
+      <div class="price-label">Best Deal</div>
       <div class="price-name">Everything Bundle</div>
-      <div class="price-amount" style="filter:blur(4px);user-select:none;"><span class="currency">$</span>???</div>
-      <div class="price-detail">Every module. Every collection. One price. Revealed soon.</div>
+      <div class="price-amount"><span class="currency">$</span>75</div>
+      <div class="price-detail">Every module available at launch. Price increases as new collections drop. Buy early, save more.</div>
       <a href="#notify" class="btn btn-secondary">Notify Me</a>
     </div>
   </div>
@@ -924,24 +924,28 @@ footer {
 <div class="newsletter" id="notify">
   <h2 class="newsletter-title">Be First to Know</h2>
   <p class="newsletter-desc">
-    Join the WeirdSynths mailing list. Get launch announcements, early access,
+    Join the WeirdSynth mailing list. Get launch announcements, early access,
     and exclusive discounts. No spam. Just weird.
   </p>
-  <form class="email-form" onsubmit="event.preventDefault(); this.innerHTML='<p style=&quot;color:#00e676;padding:14px&quot;>You\'re in. Welcome to weird.</p>';">
-    <input type="email" class="email-input" placeholder="your@email.com" required>
+  <form class="email-form" name="waitlist" method="POST" data-netlify="true" netlify-honeypot="bot-field" id="waitlist-form">
+    <input type="hidden" name="form-name" value="waitlist">
+    <p style="display:none"><label>Don't fill this out: <input name="bot-field"></label></p>
+    <input type="email" name="email" class="email-input" placeholder="your@email.com" required>
     <button type="submit" class="btn btn-primary">Join</button>
   </form>
+  <div id="form-success" style="display:none;"><p style="color:#00e676;padding:14px;font-weight:600;">You're in. Welcome to weird.</p></div>
+  <div id="form-error" style="display:none;"><p style="color:#ff2d55;padding:14px;">Something went wrong. Try again?</p></div>
 </div>
 
 <!-- ===== SOCIAL ===== -->
 <div class="social-bar">
   <a href="https://twitter.com/WeirdSynths" class="social-link" target="_blank">&#x1D54F; Twitter / X</a>
-  <a href="https://reddit.com/r/WeirdSynths" class="social-link" target="_blank">&#x1F4AC; r/WeirdSynths</a>
+  <a href="https://reddit.com/r/WeirdSynths" class="social-link" target="_blank">&#x1F4AC; Reddit</a>
   <a href="https://instagram.com/MillieBoeBillie" class="social-link" target="_blank">&#x1F4F7; @MillieBoeBillie</a>
 </div>
 
 <footer>
-  <p>&copy; 2026 WeirdSynths. The EmotionSynth Ecosystem for VCV Rack Pro 2.</p>
+  <p>&copy; 2026 WeirdSynth. Premium VCV Rack Pro 2 Ecosystem.</p>
   <p style="margin-top:0.5rem; font-size:0.7rem;">Quantum physics, non-Euclidean geometry, and your face — all in one plugin ecosystem.</p>
 </footer>
 
@@ -972,6 +976,39 @@ document.querySelectorAll('a[href^="#"]').forEach(a => {
     const target = document.querySelector(a.getAttribute('href'));
     if (target) target.scrollIntoView({ behavior: 'smooth' });
   });
+});
+
+// Netlify form AJAX submission
+const form = document.getElementById('waitlist-form');
+const successMsg = document.getElementById('form-success');
+const errorMsg = document.getElementById('form-error');
+
+form.addEventListener('submit', async (e) => {
+  e.preventDefault();
+  const btn = form.querySelector('button');
+  btn.textContent = 'Joining...';
+  btn.disabled = true;
+
+  try {
+    const formData = new FormData(form);
+    const response = await fetch('/', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+      body: new URLSearchParams(formData).toString()
+    });
+
+    if (response.ok) {
+      form.style.display = 'none';
+      successMsg.style.display = 'block';
+      errorMsg.style.display = 'none';
+    } else {
+      throw new Error('Form submission failed');
+    }
+  } catch (err) {
+    errorMsg.style.display = 'block';
+    btn.textContent = 'Join';
+    btn.disabled = false;
+  }
 });
 </script>
 </body>
